--- a/src/style.css
+++ b/src/style.css
@@ -75,25 +75,22 @@
   border: 1px solid var(--square-color-dark);
 }
 
-.label {
-  /* Hide label text from every device except screenreaders. */
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip-path: inset(50%);
-  white-space: nowrap;
-  pointer-events: none;
-}
-
-[data-square] {
+.board > tr > td {
   /* Width of table cell is implicitly 12.5% because row will have
      exactly 8 columns and `table-layout` is fixed. Padding of 12.5% * width
      ensures square aspect ratio. */
   padding: 12.5% 0 0;
   position: relative;
+}
+
+[data-square] {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   font-family: var(--coords-font-family);
   font-size: var(--coords-font-size);
   background-color: var(--p-square-color);
@@ -273,7 +270,7 @@
 /* Always use absolute positioning for pieces and slotted
    content (custom SVGs, custom content etc) */
 [data-square] .piece,
-[data-square] .content {
+[data-square] .slot {
   position: absolute;
   width: 100%;
   height: 100%;
