Make square a proper button
This is to aid accessibility and clicking.

- Make button work correctly with click event
- Prevent hover style from showing on iOS

--- a/src/style.css
+++ b/src/style.css
@@ -140,8 +140,15 @@
   cursor: grab;
 }
 
-.ready [data-square].moveable:hover,
-.moving [data-square].move-target:hover,
+@media (hover: hover) {
+  /* Hover styles only shown on devices with mouse pointers.
+     Prevent iOS Safari from persisting a hover style. */
+  .ready [data-square].moveable:hover,
+  .moving [data-square].move-target:hover {
+    --p-square-color: var(--p-square-color-highlight);
+  }
+}
+
 .moving [data-square].highlighted-target {
   --p-square-color: var(--p-square-color-highlight);
 }
