--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -1,3 +1,18 @@
+@import url("fonts/nunito-sans/200-italic.css");
+@import url("fonts/nunito-sans/200.css");
+@import url("fonts/nunito-sans/300-italic.css");
+@import url("fonts/nunito-sans/300.css");
+@import url("fonts/nunito-sans/400-italic.css");
+@import url("fonts/nunito-sans/400.css");
+@import url("fonts/nunito-sans/600-italic.css");
+@import url("fonts/nunito-sans/600.css");
+@import url("fonts/nunito-sans/700-italic.css");
+@import url("fonts/nunito-sans/700.css");
+@import url("fonts/nunito-sans/800-italic.css");
+@import url("fonts/nunito-sans/800.css");
+@import url("fonts/nunito-sans/900-italic.css");
+@import url("fonts/nunito-sans/900.css");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
