--- a/docs/_includes/layout.njk
+++ b/docs/_includes/layout.njk
@@ -13,8 +13,8 @@ title: gchessboard
     <link rel="stylesheet" href="css/main.css"/>
     <script type="module" src="{{ " /lib/gchessboard.js" | url }}"></script>
   </head>
-  <body class="px-3">
-    <header class="pt-3 pb-4">
+  <body class="p-3">
+    <header class="mb-4">
       <h1 class="text-2xl font-semibold">gchessboard</h1>
       <nav>
         <ul class="flex py-2 text-sm gap-x-3">
