--- a/docs/src/_includes/base.njk
+++ b/docs/src/_includes/base.njk
@@ -7,15 +7,16 @@ title: gchessboard
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
-    <title>{{ title }}
-      - gchessboard</title>
+    <title>{{ title }} - gchessboard</title>
     <meta name="description" content="an accessible, customizable and dependency-free chess board web component."/>
     <link rel="stylesheet" href="{{ "/css/main.css" | url }}"/>
     <script type="module" src="{{ "/lib/gchessboard.js" | url }}"></script>
   </head>
   <body class="grid grid-cols-1 px-4 py-3">
     <header class="flex flex-col pb-4 mb-6 border-b border-slate-400 sm:justify-center sm:flex-row sm:items-center sm:gap-x-10 sm:mb-10">
-      <h1 class="text-3xl font-semibold sm:text-4xl">gchessboard</h1>
+      <h1 class="text-3xl font-semibold sm:text-4xl">
+        <a href="{{ "/" | url }}">gchessboard</a>
+      </h1>
       <nav>
         {% set navPages = collections.all | eleventyNavigation %}
         <ul class="flex items-stretch py-2 text-base gap-x-6">
@@ -28,9 +29,7 @@ title: gchessboard
       </nav>
     </header>
     <main>
-      <article class="mx-auto prose">
-        {{ content | safe }}
-      </article>
+      {{ content | safe }}
     </main>
   </body>
 </html>
