--- a/docs/src/_includes/base.njk
+++ b/docs/src/_includes/base.njk
@@ -13,8 +13,8 @@ title: gchessboard
     <script type="module" src="{{ "/lib/gchessboard.js" | url }}"></script>
   </head>
   <body class="grid grid-cols-1 px-4 py-3">
-    <header class="flex flex-col pb-4 mb-6 border-b border-slate-400 sm:justify-center sm:flex-row sm:items-center sm:gap-x-10 sm:mb-10">
-      <h1 class="text-3xl font-semibold sm:text-4xl">
+    <header class="grid justify-center pb-4 mb-6 border-b border-slate-400 sm:grid-cols-2 sm:flex-row sm:items-center sm:gap-x-10 sm:mb-10">
+      <h1 class="text-3xl font-semibold sm:text-4xl sm:text-right">
         <a href="{{ "/" | url }}">gchessboard</a>
       </h1>
       <nav>
@@ -22,7 +22,7 @@ title: gchessboard
         <ul class="flex items-stretch py-2 text-base gap-x-6">
           {%- for entry in navPages %}
             <li class="py-2">
-              <a class="underline underline-offset-4 decoration-blue-600" href="{{ entry.url | url }}">{{ entry.title }}</a>
+              <a class="underline underline-offset-4 decoration-blue-600 decoration-2" href="{{ entry.url | url }}">{{ entry.title }}</a>
             </li>
           {%- endfor %}
         </ul>
