--- a/docs/src/_includes/base.njk
+++ b/docs/src/_includes/base.njk
@@ -12,17 +12,17 @@ title: gchessboard
     <link rel="stylesheet" href="{{ "/css/main.css" | url }}"/>
     <script type="module" src="{{ "/lib/gchessboard.js" | url }}"></script>
   </head>
-  <body class="grid grid-cols-1 px-4 py-3">
-    <header class="grid justify-center pb-4 mb-6 border-b border-slate-400 sm:grid-cols-2 sm:flex-row sm:items-center sm:gap-x-10 sm:mb-10">
-      <h1 class="text-3xl font-semibold sm:text-4xl sm:text-right">
+  <body class="grid px-5 py-3 gap-y-6 justify-items-center bg-zinc-50 dark:bg-zinc-800 text-zinc-700 dark:text-zinc-300 lg:gap-y-10 lg:px-8">
+    <header class="grid items-center justify-center pt-2 pb-4 border-b gap-x-9 gap-y-1 border-zinc-400 dark:border-zinc-600 justify-self-stretch sm:grid-cols-2">
+      <h1 class="text-3xl font-semibold text-zinc-900 dark:text-white sm:text-4xl sm:text-right sm:mb-0">
         <a href="{{ "/" | url }}">gchessboard</a>
       </h1>
       <nav>
         {% set navPages = collections.all | eleventyNavigation %}
-        <ul class="flex items-stretch py-2 text-base gap-x-6">
+        <ul class="flex items-stretch text-base gap-x-6">
           {%- for entry in navPages %}
             <li class="py-2">
-              <a class="underline underline-offset-4 decoration-blue-600 decoration-2" href="{{ entry.url | url }}">{{ entry.title }}</a>
+              <a class="underline text-zinc-800 dark:text-zinc-100 underline-offset-4 decoration-green-600 dark:decoration-green-500 decoration-2" href="{{ entry.url | url }}">{{ entry.title }}</a>
             </li>
           {%- endfor %}
         </ul>
@@ -31,5 +31,15 @@ title: gchessboard
     <main>
       {{ content | safe }}
     </main>
+    <footer class="pt-4 pb-8 space-y-2 text-center border-t border-zinc-400 dark:border-zinc-600 justify-self-stretch text-zinc-600 dark:text-zinc-200">
+      <p>
+        By <a href="https://twitter.com/mganjoo" class="font-semibold underline-offset-1 text-zinc-800 dark:text-white hover:underline">Milind Ganjoo</a> &middot;
+        Source code on <a href="https://github.com/mganjoo/gchessboard" class="font-semibold underline-offset-1 text-zinc-800 dark:text-white hover:underline">GitHub</a>
+      </p>
+      <p>
+        SVG chess pieces originally created on <a href="https://commons.wikimedia.org/wiki/Category:SVG_chess_pieces" class="font-semibold underline-offset-1 text-zinc-800 dark:text-white hover:underline">Wikimedia</a> by
+        <a href="https://commons.wikimedia.org/wiki/User:Cburnett" class="font-semibold underline-offset-1 text-zinc-800 dark:text-white hover:underline">cburnett</a>.
+      </p>
+    </footer>
   </body>
 </html>
