--- a/docs/src/_includes/markdown.njk
+++ b/docs/src/_includes/markdown.njk
@@ -1,6 +1,6 @@
 ---
 layout: base.njk
 ---
-<article class="mx-auto prose">
+<article class="mx-auto prose prose-zinc dark:prose-invert">
   {{ content | safe }}
 </article>
