Formatting fix for bse template file

--- a/docs/src/_includes/base.njk
+++ b/docs/src/_includes/base.njk
@@ -19,7 +19,7 @@ title: gchessboard
       </h1>
       <nav>
         {% set navPages = collections.all | eleventyNavigation %}
-        <ul class="flex items-stretch text-base gap-x-6">
+        <ul class="flex flex-wrap items-stretch justify-center text-base gap-x-6">
           {%- for entry in navPages %}
             <li class="py-2">
               <a class="underline text-zinc-800 dark:text-zinc-100 underline-offset-4 decoration-green-600 dark:decoration-green-500 decoration-2" href="{{ entry.url | url }}">{{ entry.title }}</a>
