Add attributes description

--- a/docs/src/_includes/markdown.njk
+++ b/docs/src/_includes/markdown.njk
@@ -1,6 +1,6 @@
 ---
 layout: base.njk
 ---
-<article class="grid prose prose-zinc prose-code:break-all dark:prose-invert">
+<article class="grid prose prose-zinc dark:prose-invert">
   {{ content | safe }}
 </article>
