Add prism style highlighting

--- a/docs/src/_includes/partials.njk
+++ b/docs/src/_includes/partials.njk
@@ -12,5 +12,5 @@
       </span>
     </dd>
   {% endif %}
-  <dd class="-mt-3">{{ property.description | safe }}</dd>
+  <dd class="grid -mt-3 prose-pre:mb-6">{{ property.description | safe }}</dd>
 {% endmacro %}
