--- a/docs/src/_includes/markdown.njk
+++ b/docs/src/_includes/markdown.njk
@@ -2,5 +2,11 @@
 layout: base.njk
 ---
 <article class="grid prose prose-zinc dark:prose-invert">
+  <h1>{{ title }}</h1>
+  {% if content | toc %}
+    <div>
+      {{ content | toc | safe }}
+    </div>
+  {% endif %}
   {{ content | safe }}
 </article>
