--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -1,17 +1,4 @@
-@import url("fonts/nunito-sans/200-italic.css");
-@import url("fonts/nunito-sans/200.css");
-@import url("fonts/nunito-sans/300-italic.css");
-@import url("fonts/nunito-sans/300.css");
-@import url("fonts/nunito-sans/400-italic.css");
-@import url("fonts/nunito-sans/400.css");
-@import url("fonts/nunito-sans/600-italic.css");
-@import url("fonts/nunito-sans/600.css");
-@import url("fonts/nunito-sans/700-italic.css");
-@import url("fonts/nunito-sans/700.css");
-@import url("fonts/nunito-sans/800-italic.css");
-@import url("fonts/nunito-sans/800.css");
-@import url("fonts/nunito-sans/900-italic.css");
-@import url("fonts/nunito-sans/900.css");
+@import url("@fontsource/nunito-sans");
 @import url("prism.css");
 
 @tailwind base;
@@ -29,13 +16,5 @@
 
   .keypress {
     @apply p-1 text-xs border rounded-sm font-monospace border-zinc-600;
-  }
-
-  .page-heading-anchor {
-    @apply ml-3 no-underline opacity-0 text-zinc-600 dark:text-zinc-100;
-  }
-
-  .page-heading:hover .page-heading-anchor {
-    @apply opacity-100;
   }
 }
